<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:key="pref_ns"
        app:title="@string/string_general">

<!--        <SwitchPreference
            app:title="@string/string_enablenoti"
            app:key="enablenoti"
            app:disableDependentsState="false">
        </SwitchPreference>

        <SwitchPreference
            app:title="@string/string_readfromns"
            app:key="readfromns"
            app:disableDependentsState="false">
        </SwitchPreference>-->

        <Preference
            app:key="ns_url"
            app:title="@string/string_nsurl"
            app:defaultValue="@string/default_ns_url" >
            <!--app:dependency="readfromns">  -->
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="glucose"
        app:title="@string/string_bg">

        <!--
        <ListPreference
            app:key="units"
            app:title="@string/string_bgunit"
            app:entries="@array/bgUnitEntries"
            app:entryValues="@array/bgUnitValues"
            app:defaultValue="mgdl"/>
        string -->

        <EditTextPreference
            app:key="urgent_high_value"
            app:title="@string/string_urgenthigh"
            app:defaultValue="260"/>

        <EditTextPreference
            app:key="high_value"
            app:title="@string/string_high"
            app:defaultValue="180"/>

        <EditTextPreference
            app:key="low_value"
            app:title="@string/string_low"
            app:defaultValue="80"/>

        <EditTextPreference
            app:key="urgent_low_value"
            app:title="@string/string_urgentlow"
            app:defaultValue="55"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="display"
        app:title="@string/string_displayinfo">

        <ListPreference
            app:key="preftimeformat"
            app:title="@string/string_timeformat"
            app:entries="@array/timeformatEntries"
            app:entryValues="@array/timeformatValues"
            app:defaultValue="timeformat24"/>

        <SwitchPreference
            app:key="iob_enable"
            app:title="@string/string_displayiob"
            app:disableDependentsState="false"
            android:defaultValue="true">
        </SwitchPreference>

        <SwitchPreference
            app:key="cob_enable"
            app:title="@string/string_displaycob"
            app:disableDependentsState="false"
            android:defaultValue="true">
        </SwitchPreference>

        <SwitchPreference
            app:key="basal_enable"
            app:title="@string/string_displaybasal"
            app:disableDependentsState="false"
            android:defaultValue="true">
        </SwitchPreference>

        <SwitchPreference
            app:key="chart_enable"
            app:title="@string/string_displaychart"
            android:defaultValue="true">
        </SwitchPreference>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="alarm"
        app:title="@string/string_alarm">

        <SwitchPreference
            app:key="vibrate_enable"
            app:title="@string/string_vibrate"
            android:defaultValue="true">
        </SwitchPreference>

        <SwitchPreference
            app:key="ringtone_enable"
            app:title="@string/string_ringtone"
            android:defaultValue="true">
        </SwitchPreference>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="fontcolor"
        app:title="@string/string_fontcolor">

        <ListPreference
            app:key="fontcolornormal"
            app:title="@string/string_fontcolornormal"
            app:entries="@array/pref_color"
            app:entryValues="@array/pref_color_code"
            app:defaultValue="#FCFFFFFF"/>

        <ListPreference
            app:key="fontcolorhighlow"
            app:title="@string/string_fontcolorhighlow"
            app:entries="@array/pref_color"
            app:entryValues="@array/pref_color_code"
            app:defaultValue="#FCFFFF00"/>

        <ListPreference
            app:key="fontcolorurgenthighlow"
            app:title="@string/string_fontcolorurgenthighlow"
            app:entries="@array/pref_color"
            app:entryValues="@array/pref_color_code"
            app:defaultValue="#FCFF0000"/>
    </PreferenceCategory>


    <PreferenceCategory
        app:key="chartsetting"
        app:title="@string/string_chartdisplay">

        <EditTextPreference
            app:key="chartbgpointsize"
            app:title="@string/string_chartbgpointsize"
            app:defaultValue="4"/>

        <ListPreference
            app:key="chartlinecolorhighlow"
            app:title="@string/string_chartlinecolorhighlow"
            app:entries="@array/pref_color"
            app:entryValues="@array/pref_color_code"
            app:defaultValue="#FCFFFF00"/>

        <ListPreference
            app:key="chartlinecolorurgenthighlow"
            app:title="@string/string_chartlinecolorurgenthighlow"
            app:entries="@array/pref_color"
            app:entryValues="@array/pref_color_code"
            app:defaultValue="#FCFF0000"/>

        <EditTextPreference
            app:key="chartlinewidth"
            app:title="@string/string_chartlinewidth"
            app:defaultValue="1"/>

        <SwitchPreference
            app:key="chart_xaxis_enable"
            app:title="@string/string_xaxis_enable"
            android:defaultValue="true">
        </SwitchPreference>

        <EditTextPreference
            app:key="chartBG_max"
            app:title="@string/string_chartBG_max"
            app:defaultValue="400"/>

        <EditTextPreference
            app:key="chartBG_min"
            app:title="@string/string_chartBG_min"
            app:defaultValue="40"/>

    </PreferenceCategory>

</PreferenceScreen>